# sorex-engine

./: .clang-format  .cmake-format.yaml  .cppcheck-supressions  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GEMINI.md  TODO.yml
.github/: CODEOWNERS
.github/workflows/: code-format.yml  cppcheck.yaml  unit-tests.yml  win64-unit-tests.yml
.nvim/: launch.json
CMake/: BuildTools.cmake  TargetPlatform.cmake
Engine/: CMakeLists.txt
Engine/Include/Sorex/: Assert.h  Bitmask.h  Color.h  CoreMinimal.h  Director.h  JournalManager.h  Launcher.h  MemoryStream.h  Platform.h  RuntimeClass.h  Status.h  Stream.h  String.h  SxAnchorPoint.h  SxAssert.h  SxBitmask.h  SxColor.h  SxCoreMinimal.h  SxDirector.h  SxDirectory.h  SxFile.h  SxFileSystem.h  SxJournalManager.h  SxLauncher.h  SxMemoryStream.h  SxPlatform.h  SxRootFileSystem.h  SxRuntimeClass.h  SxStatus.h  SxStream.h  SxTask.h  SxThread.h  SxTime.h  SxTypes.h  SxWindow.h  Time.h  Types.h  Window.h
Engine/Include/Sorex/Asset/: SxAsset.h  SxAssetCreator.h  SxAssetDependence.h  SxAssetFileSystemStorage.h  SxAssetHandler.h  SxAssetLoader.h  SxAssetManager.h  SxAssetOptions.h  SxAssetRegistry.h  SxAssetStorage.h  SxFontLoader.h  SxTextureLoader.h
Engine/Include/Sorex/Containers/: ListenerContainer.h  ObjectContainer.h  SxListenerContainer.h  SxObjectContainer.h
Engine/Include/Sorex/FileSystem/: SxDirectorFileSystem.h  SxDirectory.h  SxFile.h  SxFileSystem.h  SxPathUtils.h  SxRootFileSystem.h
Engine/Include/Sorex/Graphics/: GraphicsTypes.h  Renderer.h  SxBlendMode.h  SxCanvas.h  SxCanvasPencil.h  SxFont.h  SxFontDecorator.h  SxGraphicsTypes.h  SxRenderDevice.h  SxRenderer.h  SxTexture2D.h  SxTextureBitmap.h  SxTextureSampler.h  SxVertex.h  TextureBitmap.h
Engine/Include/Sorex/Input/: InputEvent.h  InputSystem.h  Mouse.h  SxInputEvent.h  SxInputSystem.h  SxMouse.h
Engine/Include/Sorex/Math/: Color.h  Maths.h  Matrix3x3.h  Point.h  Rectangle.h  Size.h  SxMaths.h  SxMatrix3x3.h  SxNumericRange.h  SxPoint.h  SxRectangle.h  SxSize.h  SxVector2.h  SxVector3.h  SxVector4.h  Vector2.h  Vector3.h  Vector4.h
Engine/Include/Sorex/Memory/: SxMemoryBlock.h
Engine/Include/Sorex/Thread/: Thread.h
Engine/Include/Sorex/Utils/: BytesUtils.h  String.h  SxBytesUtils.h  SxObjectFactory.h  SxStatisticsManager.h  SxStatisticsProvider.h  SxStatisticsValue.h  SxString.h
Engine/Platform/: CMakeLists.txt  DesktopMouse.h
Engine/Platform/Desktop/: DesktopGraphicsFramework.cpp  DesktopGraphicsFramework.h  DesktopInputSystem.cpp  DesktopInputSystem.h  DesktopLauncher.cpp  DesktopMouse.cpp  DesktopMouse.h  DesktopWindow.cpp  DesktopWindow.h  SxDesktopGraphicsFramework.cpp  SxDesktopGraphicsFramework.h  SxDesktopInputSystem.cpp  SxDesktopInputSystem.h  SxDesktopLauncher.cpp  SxDesktopMouse.cpp  SxDesktopMouse.h  SxDesktopWindow.cpp  SxDesktopWindow.h
Engine/Platform/Desktop/Include/Sorex/: DesktopLauncher.h
Engine/Platform/Linux/: LinuxPathUtils.cpp  LinuxPlatform.cpp  SxLinuxPathUtils.cpp  SxLinuxPlatform.cpp
Engine/Platform/Linux/Include/Sorex/: SxLinuxPlatform.h
Engine/Platform/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLCommon.cpp  GLDebugOutput.cpp  GLExtensions.cpp  GLExtensions.h  GLFontRenderer.cpp  GLFontRenderer.h  GLPrimitiveRenderer.cpp  GLPrimitiveRenderer.h  GLQuadBatch.cpp  GLQuadBatch.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderDevice.cpp  GLRenderDevice.h  GLRenderTechnique.h  GLResource.cpp  GLResource.h  GLResourceToken.cpp  GLResourceToken.h  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLShaderSource.h  GLStatisticsProvider.cpp  GLStatisticsProvider.h  GLTexture2D.cpp  GLTexture2D.h  GLTextureRenderer.cpp  GLTextureRenderer.h  GLTypes.h  GLUniform.cpp  GLUniform.h  GLVertexArray.h
Engine/Platform/OpenGL/Shaders/: GLColorShaderSource.cpp  GLFontShaderSource.cpp  GLTextShaderSource.cpp  GLTextureShaderSource.cpp
Engine/Platform/Win32/: SxWin32PathUtils.cpp  SxWin32Platform.cpp  Win32PathUtils.cpp  Win32Platform.cpp
Engine/Platform/Win32/Include/Sorex/: Win32Platform.h
Engine/Source/: Color.cpp  Director.cpp  GraphicsTypes.cpp  JournalManager.cpp  Launcher.cpp  Mouse.cpp  RuntimeClass.cpp  Status.cpp  Stream.cpp  String.cpp  SxAnchorPoint.cpp  SxAsset.cpp  SxAssetLoadingTask.cpp  SxAssetManager.cpp  SxColor.cpp  SxDirector.cpp  SxJournalManager.cpp  SxMouse.cpp  SxRuntimeClass.cpp  SxStatus.cpp  SxStream.cpp  SxString.cpp  SxTaskWorker.cpp  SxTaskWorker.h  SxTextureBitmap.cpp  SxThread.cpp  SxTime.cpp  TextureBitmap.cpp  Thread.cpp  Time.cpp
Engine/Source/Asset/: SxAsset.cpp  SxAssetFileSystemStorage.cpp  SxAssetLoader.cpp  SxAssetLoadingTask.cpp  SxAssetLoadingTask.h  SxAssetManager.cpp  SxDefaultImageLoader.cpp  SxDefaultImageLoader.h  SxFontLoader.cpp  SxTextureLoader.cpp  SxTgaImageLoader.cpp  SxTgaImageLoader.h
Engine/Source/Asset/Font/: SxXmlFontDataLoader.cpp  SxXmlFontDataLoader.h
Engine/Source/FileSystem/: SxDirectorFileSystem.cpp  SxDirectory.cpp  SxFile.cpp  SxFileSystem.cpp  SxFileUtils.cpp  SxFileUtils.h  SxPathUtils.cpp  SxPathUtils.h  SxRootFileSystem.cpp  SxStaticDirectory.cpp  SxStaticDirectory.h
Engine/Source/Graphics/: SxBlendMode.cpp  SxCanvas.cpp  SxFont.cpp  SxFontDecorator.cpp  SxGraphicsTypes.cpp  SxTextureSampler.cpp  SxVertex.cpp
Engine/Source/Utils/: SxStatisticsManager.cpp  SxStopWatch.cpp  SxStopWatch.h  XmlReader.cpp  XmlReader.h
Engine/Tests/: CMakeLists.txt
Engine/Tests/Units/: Test_AssetManager.cpp  Test_BytesUtils.cpp  Test_File.cpp  Test_FloatPoint.cpp  Test_IntegerPoint.cpp  Test_ListenerContainer.cpp  Test_Mat3.cpp  Test_Maths.cpp  Test_ObjectContainer.cpp  Test_PathUtils.cpp  Test_ReadOnlyMemoryStream.cpp  Test_RuntimeClass.cpp  Test_StaticDirectory.cpp  Test_Status.cpp  Test_String.cpp  Test_TextureBitmap.cpp
Extras/Cppcheck/: Cppcheck.sh
Extras/Cppcheck/Scripts/: cppcheck_conv.py
Extras/Cppcheck/Scripts/CppcheckReport/: __init__.py  cppcheck_codequality.py  cppcheck_junit.py  cppcheck_report.py
Extras/Shell/: ClangFormat.sh  GitChangedFiles.sh
Sandbox/: CMakeLists.txt  Main.cpp
Sandbox/Fonts/: Arial-Bold.xml  SDF-Font-Test.xml
(+2 files in other folders)
